tests/success/lets/Concrete.vix
main =
  let T = Int
      f : T -> T
      f x = addInt 3 x
  printInt (f 120)
