tests/type-error/cycle-detection/local/Lambda.vix
main =
  let
    f : Int
    f = (\x. f) 1
  printInt f
